--- a/app/src/main/res/layout/films_layout.xml
+++ b/app/src/main/res/layout/films_layout.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constrain_films_back"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_width="120dp"
     android:layout_height="140dp"
     android:layout_marginTop="5dp"
@@ -13,7 +15,8 @@
         android:id="@+id/imageViewFilm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:contentDescription="@string/pic"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pobeg" />
