--- a/app/src/main/res/layout/films_layout.xml
+++ b/app/src/main/res/layout/films_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constrain_films_back"
     android:clickable="true"
     android:focusable="true"
-    android:layout_width="120dp"
+    android:layout_width="280dp"
     android:layout_height="140dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
@@ -12,18 +13,18 @@
     android:layout_marginEnd="5dp">
 
     <ImageView
-        android:id="@+id/imageViewFilm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/pic"
+        android:id="@+id/imageViewFilm1"
+        android:layout_width="120dp"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/pic1"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pobeg" />
 
     <TextView
-        android:id="@+id/textViewFilms"
-        android:layout_width="match_parent"
+        android:id="@+id/textViewFilms1"
+        android:layout_width="120dp"
         android:layout_height="35dp"
         android:background="@color/gray_title_films"
         android:fontFamily="@font/inter"
@@ -31,5 +32,30 @@
         android:text="@string/textview"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageViewFilm2"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pobeg" />
+
+    <TextView
+        android:id="@+id/textViewFilms2"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:background="@color/gray_title_films"
+        android:fontFamily="@font/inter"
+        android:gravity="center"
+        android:text="@string/textview"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewFilm2" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
